--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="/helloc.css" rel="stylesheet"/>
     <button> "hello there" </button>
     <p> hello there </p>
 </head>
